--- a/hobot-models-basic/DEBIAN/control
+++ b/hobot-models-basic/DEBIAN/control
@@ -1,9 +1,9 @@
 Package: hobot-models-basic
-Version: 1.0.2
+Version: 1.0.3
 Section: utils 
 Architecture: arm64
 Installed-Size: 472000
 Pre-Depends: 
 Depends:
-Maintainer: kairui.wang <kairui.wang@horizon.ai style="word-wrap: break-word;"> 
+Maintainer: kairui.wang <kairui.wang@d-robotics.cc style="word-wrap: break-word;"> 
 Description: Basic models
